--- a/Problem-3/Problem-3.csproj
+++ b/Problem-3/Problem-3.csproj
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{250198E1-F677-442B-9DCD-D28992B1D476}</ProjectGuid>
+        <ProjectGuid>{2657B798-B00F-4DA0-8644-E1AD3A284ABF}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Problem_5</RootNamespace>
-        <AssemblyName>Problem_5</AssemblyName>
+        <RootNamespace>Problem_3</RootNamespace>
+        <AssemblyName>Problem_3</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -38,19 +38,12 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Citizens.cs" />
-        <Compile Include="IBirthday.cs" />
-        <Compile Include="ICitizen.cs" />
-        <Compile Include="IId.cs" />
-        <Compile Include="IPet.cs" />
-        <Compile Include="IRobots.cs" />
-        <Compile Include="Pet.cs" />
-        <Compile Include="Robots.cs" />
+        <Compile Include="IBrowse.cs" />
+        <Compile Include="Phone.cs" />
+        <Compile Include="SmartPhone.cs" />
         <Compile Include="StartUp.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <Content Include="tri.md" />
+        <Compile Include="StaticPhone.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
