--- a/Problems-6/Problems-6.csproj
+++ b/Problems-6/Problems-6.csproj
@@ -4,11 +4,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{250198E1-F677-442B-9DCD-D28992B1D476}</ProjectGuid>
+        <ProjectGuid>{A97A6465-D37A-4764-9B0B-7309163BF741}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Problem_5</RootNamespace>
-        <AssemblyName>Problem_5</AssemblyName>
+        <RootNamespace>Problems_6</RootNamespace>
+        <AssemblyName>Problems_6</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
     </PropertyGroup>
@@ -40,17 +40,12 @@
     <ItemGroup>
         <Compile Include="Citizens.cs" />
         <Compile Include="IBirthday.cs" />
+        <Compile Include="IBuyer.cs" />
         <Compile Include="ICitizen.cs" />
         <Compile Include="IId.cs" />
-        <Compile Include="IPet.cs" />
-        <Compile Include="IRobots.cs" />
-        <Compile Include="Pet.cs" />
-        <Compile Include="Robots.cs" />
+        <Compile Include="Rebel.cs" />
         <Compile Include="StartUp.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <Content Include="tri.md" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
